<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sun_ki_yu_vadim"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="#df2525"
        android:layout_margin="15dp"
        android:background="#470747" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcom_to_the_web_city_of_sun_ki_yu_vadim"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="#69becf"
        android:layout_margin="15dp"
        android:background="#470747"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="15dp"
        android:src="@drawable/angry"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:text="@string/view_my_brief_bio" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:text="@string/view_my_profile"
        tools:ignore="ExtraText" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:text="@string/open_my_camera" />

</LinearLayout>